vbnc/vbnc/tests/Errors/42020.vb
Option Explicit Off

Class ConstantBounds1
    Sub One()
        Dim l(1L)
    End Sub
End Class